// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> renders a header component with everything enabled 1`] = `
<div
  className="cl-auth-form-header"
  style={Object {}}
>
  <a
    aria-label="Back Button"
    className="cl-back-button cl-back-button-absolute"
    onClick={[Function]}
  >
    <svg
      data-filename="../shared/assets/icons/arrow-left.svg"
    />
  </a>
  <div
    style={Object {}}
  >
    <div
      className="cl-error"
    >
      boom
    </div>
  </div>
  <div
    className="cl-auth-form-header-logo"
  >
    <div
      className="cl-logo"
    />
  </div>
  <div
    className="cl-auth-form-header-greeting"
  >
    <label
      className="label"
    >
      Welcome, 
      Joe
    </label>
  </div>
</div>
`;

exports[`<Header/> renders a plain header 1`] = `
<div
  className="cl-auth-form-header"
  style={Object {}}
>
  <div
    className="cl-auth-form-header-logo"
  >
    <div
      className="cl-logo"
    />
  </div>
</div>
`;
